
    - Fix: Constraint::Equal with not(1) set no longer sets an error when both
      field values are empty strings.
    
    - Fix: An empty block with nested_name set, containing Label elements and
      no other fields, was causing the block's nested_name to be added to
      $form->valid(). RT #54967
    
    - Constraint 'when' condition now supports new 'fields' and 'any_field'
      options.
    
    - Bumped required version of DateTime to 0.54 - needed to pass tests under
      Test::More 0.96.

0.07003 2010-08-02

    - Fix: Group element now escapes each items attributes, label_attributes
      and container attributes (based on by patch by Jeff Dairiki).
    
    - Fix: If using default_natural, use default_datetime_args{set_time_zone}
      if it's also set (Radek).
    
    - Filter::HTMLScrubber extra functionality.
    
    - Update _merge_hashes() so it can also merge arrays and hashes into a new
      array. This is necessary to allow default_args() to define a different
      ref-type than the element or processor which uses its values.
    
    - Update Element::reCAPTCHA tests after changes to Captcha::reCAPTHCA
      (bump dependency version).

0.07002 2010-06-24

    - Fix: Use MRO::Compat before mro to support perl 5.8
    
    - Fix: Date and ComboBox elements need to run deflators before trying to
      use any default value - reported by Matija Grabnar.
    
    - Overloading comparisons no longer assume both arguments are a blessed
      object - change needed for latest Test::More (Test-Simple-0.95_02)
      (RT#57747)
    
    - Change Element::Date to not use deprecated DateTime::Locale methods.
    
    - Bump DateTime::Locale and DateTime::Format::Strptime required versions
      as DateTime::Locale Changes file has no mention of when the methods
      we're now using were added.
    
    - Removed Regexp::Copy from prereqs.

0.07001 2010-05-16

    - No changes - cpan indexer failed for last release

0.07000 2010-05-16
